--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.susannahjones.bookassist.MainActivity">
+    tools:context="com.example.susannahjones.bookassist.CameraActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -14,11 +14,5 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    <android.widget.Button
-        android:id="@+id/new_item_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Let's Get Scanning!"
-        android:layout_gravity="center"
-        android:onClick="onButtonClick"/>
+
 </android.support.constraint.ConstraintLayout>
