--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,24 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <android.widget.Button
         android:id="@+id/new_item_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Let's Get Scanning!"
         android:layout_gravity="center"
-        android:onClick="onButtonClick"/>
+        android:onClick="onButtonClick"
+        android:text="Let's Get Scanning!"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <android.widget.Button
+        android:id="@+id/new_item_gbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:onClick="onGButtonClick"
+        android:text="Search Test!"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/new_item_button"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
