--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -10,6 +10,7 @@
         android:scaleType="fitXY"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:contentDescription="@null"
         android:src="@drawable/library"
         app:layout_constraintBottom_toTopOf="@id/new_item_button"
@@ -17,14 +18,18 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
+        android:id="@+id/status_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="190dp"
+        android:background="#DCDCDC"
         android:text="@string/barcode_header"
-        android:id="@+id/status_message"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_centerHorizontal="true" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:gravity="center"
+        android:textSize="29dp"
+        android:textStyle="bold" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -39,33 +44,45 @@
         android:layout_alignEnd="@+id/status_message" />
 
     <Button
+        android:id="@+id/read_barcode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/read_barcode"
-        android:id="@+id/read_barcode"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/auto_focus"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="69dp"
+        android:textSize="25dp"
+        android:text="@string/read_barcode" />
 
     <CheckBox
+        android:id="@+id/auto_focus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/auto_focus"
-        android:id="@+id/auto_focus"
-        android:layout_below="@+id/barcode_value"
+        android:layout_alignBottom="@+id/barcode_value"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="66dp"
-        android:checked="false" />
+        android:layout_marginLeft="44dp"
+        android:layout_marginStart="44dp"
+        android:background="#DCDCDC"
+        android:checked="true"
+        android:text="@string/auto_focus"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
     <CheckBox
+        android:id="@+id/use_flash"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/use_flash"
-        android:id="@+id/use_flash"
-        android:layout_alignTop="@+id/auto_focus"
-        android:layout_alignParentRight="true"
+        android:layout_alignBaseline="@+id/auto_focus"
+        android:layout_alignBottom="@+id/auto_focus"
         android:layout_alignParentEnd="true"
-        android:checked="false" />
+        android:layout_alignParentRight="true"
+        android:layout_marginEnd="50dp"
+        android:layout_marginRight="50dp"
+        android:background="#DCDCDC"
+        android:checked="false"
+        android:text="@string/use_flash"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
 
