hardcodes book data

--- a/app/src/main/res/layout/activity_book_four.xml
+++ b/app/src/main/res/layout/activity_book_four.xml
@@ -32,7 +32,7 @@
                 android:id="@+id/book_name_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Title here" />
+                android:text="Title: Games, Design and Play A Detailed Approach to Iterative Game Design  " />
 
 
 
@@ -40,7 +40,7 @@
                 android:id="@+id/description_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Placeholder author maybe?" />
+                android:text="Author: Colleen Macklin" />
 
 
 
@@ -48,7 +48,7 @@
                 android:id="@+id/lat_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="another label" />
+                android:text="Goodreads: 4.6/5" />
 
 
 
