--- a/app/src/main/res/layout/activity_book_three.xml
+++ b/app/src/main/res/layout/activity_book_three.xml
@@ -33,7 +33,7 @@
                 android:id="@+id/book_name_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Title here" />
+                android:text="Title: The Feast of the Goat" />
 
 
 
@@ -41,7 +41,7 @@
                 android:id="@+id/description_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Placeholder author maybe?" />
+                android:text="Author: Mario Vargas Llosa" />
 
 
 
@@ -49,7 +49,7 @@
                 android:id="@+id/lat_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="another label" />
+                android:text="Goodreads: 4.2/5" />
 
 
 
