--- a/app/src/main/res/layout/activity_book_one.xml
+++ b/app/src/main/res/layout/activity_book_one.xml
@@ -19,12 +19,14 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center_horizontal"
-            android:padding="25dip">
+            android:padding="20dp">
+
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:scaleType="fitCenter"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:src="@drawable/book1cover"
                 android:adjustViewBounds="true"
                 android:maxHeight="300dp"
@@ -35,6 +37,7 @@
                 android:id="@+id/book_name_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingTop="15dp"
                 android:text="The Game Design Reader: A Rules of Play Anthology" />
 
 
