--- a/app/src/main/res/layout/activity_book_three.xml
+++ b/app/src/main/res/layout/activity_book_three.xml
@@ -17,12 +17,13 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center_horizontal"
-            android:padding="25dip">
+            android:padding="20dp">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:scaleType="fitCenter"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:src="@drawable/book3cover"
                 android:adjustViewBounds="true"
                 android:maxHeight="300dp"
